--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <script src="/app.js"></script>
 </head>
 <body>
-<p> Adults Plain T-shirt    </p>
-<p>Price: $ 7.99</p>
-<button onclick="alert('Added')">ADD</button>
-<button onclick="console.log('Purchasing');
-                alert('Purchased');">Buy</button>
+
+    <h1>This is a Calculator</h1>
+    <button onclick="calulation+=1;">1</button>
+    <button onclick="calulation+=2;">2</button>
+    <button onclick="calulation+=3;">3</button>
+    <button onclick="calulation+=' + ';">+</button>
+    <button onclick="calulation+='=';">=</button>
 
 
 </body>
